# optimus-mk1

./: .gitignore  CLAUDE.md  PORTING_NOTES.md  README.md  pyproject.toml
docs/: PORTING_NOTES.md  TUI.md
heartbreaker/: OPTIMUS.md  electron-builder.yml  package-lock.json  package.json
heartbreaker/src/main/: index.ts
optimus/: __init__.py  __main__.py  api.py  claudemd.py  constants.py  context.py  env_utils.py  llm_client.py  main.py  prompts.py  query.py  tool.py
optimus/bootstrap/: __init__.py  state.py
optimus/commands/: __init__.py
optimus/peer/: __init__.py  __main__.py  client.py  config.py  handlers.py
optimus/server/: __init__.py  __main__.py  app.py  requirements.txt
optimus/services/: __init__.py  mcp.py
optimus/tasks/: __init__.py  task_registry.py
optimus/tools/: __init__.py
optimus/tools/agent_tool/: __init__.py  agent_tool.py  prompt.py
optimus/tools/ask_user_question_tool/: __init__.py  ask_user_question_tool.py  prompt.py
optimus/tools/bash_tool/: __init__.py  bash_tool.py  prompt.py
optimus/tools/brief_tool/: __init__.py  brief_tool.py  prompt.py
optimus/tools/config_tool/: __init__.py  config_tool.py  prompt.py
optimus/tools/enter_plan_mode_tool/: __init__.py  constants.py  enter_plan_mode_tool.py  prompt.py
optimus/tui/: __init__.py  app.py  brand.py  theme.tcss  themes.py
optimus/utils/: cleanup_registry.py  config.py  cwd.py  debug.py  diag_logs.py  diff.py  env.py  errors.py  file.py  file_read.py  frontmatter_parser.py  git.py  glob.py  json.py  log.py  notebook.py  path.py  ripgrep.py  tasks.py
(+118 files in other folders)
